GNOME Bugzilla – Bug 727536
Crashes when trying to save a copy
Last modified: 2014-04-04 08:50:33 UTC
Open any PDF (could affect other formats too) and try to save a copy from the gear menu. It will crash with the following backtrace: (gdb) bt
+ Trace 233429
I tried evince-3.12.0 and the gnome-3-12 branch.
This is a fallout from: commit 41ce0e16cc3f395766abb239f990dd98c3144001 Author: Christian Persch <chpe@gnome.org> Date: Thu Feb 13 13:58:57 2014 +0100 shell: Fix potential read-after-free in gsettings use It's not valid to use '&' with g_settings_get(). https://bugzilla.gnome.org/show_bug.cgi?id=723737
Created attachment 273521 [details] [review] ev-window: Don't crash when trying to save a copy
Comment on attachment 273521 [details] [review] ev-window: Don't crash when trying to save a copy Thanks!. Please push it to both brtanches.