ev-window: Don't crash when trying to save a copy

We can not free both folder_uri and parent_uri. If parent_uri is
non-NULL then it will point to the same location as folder_uri.
Also, parent_uri is now unused so we can just remove it.

Fallout from 41ce0e16cc3f395766abb239f990dd98c3144001

https://bugzilla.gnome.org/show_bug.cgi?id=727536